makes sure everything works as currently intended removes rate limiting for now
